test/bad/lambdas/lambda08.px

func f(g: Int->Int->Int) def
    return

f(_+_-_)
